--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "joi": "^17.13.1",
+    "moment-timezone": "^0.5.45",
     "mongoose": "^8.4.1",
     "mongoose-unique-validator": "^5.0.0",
     "node-cron": "^3.0.3",
